Hosting swagger file
